--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <div class="tela-inicial">
-            <img id="#logo" src="../../assets/logo-branco.png" width="150px" height="120px">
+            <img id="#logo" src="./assets/logo-branco.png" width="150px" height="120px">
             <h1>Contabil Quiz</h1>
             <input type="text" name="playerName" id="nome-jogador" placeholder=" Insira seu nome">
             <p id="alert" style="color: red;"></p>
             <div class="btns">
                 <a id="btn-iniciar">Iniciar</a>
-                <a href="../ranking/index.html" id="btn-ranking">Ranking</a>
+                <a href="./pages/ranking/index.html" id="btn-ranking">Ranking</a>
             </div>
             
         </div>
